[project]
name = "ASTPARSER"
version = "0.0.1"
description = "A high-performance AST parsing utility enabling multi-language support with JSON AST serialization, ideal for intelligent code analysis pipelines."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Abinayasankar M", email = "abinayasankar2004@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
  "tree-sitter",
  "tree-sitter-languages",
  "langchain-groq",
  "pydantic"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
Source = "https://github.com/Abinayasankar-co/ASTParser"

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"
